[added] add ease transition time prop

--- a/examples/basic/app.css
+++ b/examples/basic/app.css
@@ -1,12 +1,10 @@
 .ReactModal__Overlay {
   -webkit-perspective: 600;
   perspective: 600;
-  opacity: 0;
 }
 
 .ReactModal__Overlay--after-open {
-  opacity: 1;
-  transition: opacity 150ms ease-out;
+  transition: transform 150ms ease-out;
 }
 
 .ReactModal__Content {
@@ -17,15 +15,11 @@
 .ReactModal__Content--after-open {
   -webkit-transform: scale(1) rotateX(0deg);
   transform: scale(1) rotateX(0deg);
-  transition: all 150ms ease-in;
-}
-
-.ReactModal__Overlay--before-close {
-  opacity: 0;
+  transition: transform 150ms ease-in;
 }
 
 .ReactModal__Content--before-close {
   -webkit-transform: scale(0.5) rotateX(30deg);
   transform: scale(0.5) rotateX(30deg);
-  transition: all 150ms ease-in;
+  transition: transform 150ms ease-in;
 }
